crates/plotnik-tests/tests/04-emit/types/alternations/error_conflicting_ref_types_across_alternatives.txt
Row = (pair
  key: (_) @key
  value: (_) @val
)

Name = (property_identifier) @name

Q = (program
  (expression_statement
    (parenthesized_expression
      (object
        [
          (Row) @x
          (Name) @x
        ]
      )
    )
  )
)
------------------ DIAGNOSTICS -------------------
error: capture `@x` has incompatible types across alternatives
  --> query.ptk:13:17
   |
13 |           (Row) @x
   |                 ^^
14 |           (Name) @x
   |                  -- and a different type here
   |
help: make every alternative produce the same type, or label the alternatives for a variant type
